--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "fire-lib-js-svelte",
 	"version": "0.1.0",
-	"author": "Sören Meier <soeren@s-me.ch>",
+	"author": "Sören Meier <info@s-me.ch>",
 	"type": "module",
 	"repository": {
 		"type": "git",
