--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
 	"scripts": {
 		"test": "vitest",
 		"check": "prettier -c .",
-		"lint": "eslint ./src"
+		"lint": "eslint ./src",
+		"build": "tsc",
+		"watch": "tsc -w"
 	},
 	"repository": {
 		"type": "git",
@@ -14,19 +16,22 @@
 	},
 	"license": "MIT or Apache-2.0",
 	"exports": {
-		"./routing/Request": "./src/routing/Request.js",
-		"./routing/Route": "./src/routing/Route.js",
-		"./routing/Router": "./src/routing/Router.js",
-		"./ssr/SsrCache": "./src/ssr/SsrCache.js",
-		"./ssr/SsrComponents": "./src/ssr/SsrComponents.js",
-		"./stores/Writable": "./src/stores/Writable.js"
+		"./routing/Request": "./dist/routing/Request.js",
+		"./routing/Route": "./dist/routing/Route.js",
+		"./routing/Router": "./dist/routing/Router.js",
+		"./ssr/SsrCache": "./dist/dist/SsrCache.js",
+		"./ssr/SsrComponents": "./dist/ssr/SsrComponents.js",
+		"./stores/Writable": "./dist/stores/Writable.js"
 	},
 	"devDependencies": {
 		"eslint": "^8.45.0",
 		"vitest": "^1.1.3",
-		"prettier": "^3.2.4"
+		"prettier": "^3.2.4",
+		"tslib": "^2.6.2",
+		"typescript": "^5.2.2"
+
 	},
 	"dependencies": {
-		"fire": "npm:fire-lib-js@0.3.0-alpha.1"
+		"fire": "npm:fire-lib-js@^0.3.0-alpha.1"
 	}
 }
